--- a/layouts/partials/social-follow.html
+++ b/layouts/partials/social-follow.html
@@ -1,5 +1,6 @@
 <!-- TODO: Add follow intents where available TODO: Revisit color and hover color -->
 {{ $icon_size := "32px" }}
+{{ $icon_size1 := "10px" }}
 {{ with .Param "facebook" }}
 <a href="{{ . }}" target="_blank" class="link-transition facebook link dib z-999 pt3 pt0-l mr1" title="Facebook link" rel="noopener" aria-label="follow on Facebook——Opens in a new window">
   {{ partial "svg/facebook.svg" (dict "size" $icon_size) }}
@@ -59,4 +60,12 @@
   {{ partial "svg/slack.svg" (dict "size" $icon_size) }}
   {{- partial "new-window-icon.html" . -}}
 </a>
+{{ end }}
+{{ with .Param "envelope" }}
+<div>
+<a href="{{ . }}" target="_blank" class="link-transition envelope link dib z-999 pt3 pt0-l mr1" title="Send email" rel="noopener" aria-label="mail——Opens in a new window">
+  {{ partial "svg/envelope.svg" (dict "size" $icon_size1) }}
+  {{- partial "new-window-icon.html" . -}}
+</a>
+</div>
 {{ end }}
