--- a/layouts/partials/social-follow.html
+++ b/layouts/partials/social-follow.html
@@ -62,10 +62,8 @@
 </a>
 {{ end }}
 {{ with .Param "envelope" }}
-<div>
 <a href="{{ . }}" target="_blank" class="link-transition envelope link dib z-999 pt3 pt0-l mr1" title="Send email" rel="noopener" aria-label="mail——Opens in a new window">
-  {{ partial "svg/envelope.svg" (dict "size" $icon_size1) }}
+  {{ partial "svg/envelope.svg" (dict "size" $icon_size) }}
   {{- partial "new-window-icon.html" . -}}
 </a>
-</div>
 {{ end }}
