--- a/layouts/partials/page-header.html
+++ b/layouts/partials/page-header.html
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" href="/images/icon.png">
 {{ $featured_image := .Params.featured_image }}
 {{ if $featured_image }}
   {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}}
