--- a/layouts/partials/social-follow.html
+++ b/layouts/partials/social-follow.html
@@ -1,13 +1,13 @@
 <!-- changed by RR: use foundation icons instead of svg -->
 {{ with .Param "twitter" }}
-<a href="{{ . }}" target="_blank" class="f2 grow silver hover-white link dib z-999 pt3 pt0-l mr1 fi-social-twitter" title="Twitter link" rel="noopener" aria-label="follow on Twitter——Opens in a new window">
+<a href="{{ . }}" target="_blank" class="f2 grow silver hover-rorange link dib z-999 pt3 pt0-l mr1 fi-social-twitter" title="Twitter link" rel="noopener" aria-label="follow on Twitter——Opens in a new window">
 </a>
 {{ end }}
 {{ with .Param "github" }}
-<a href="{{ . }}" target="_blank" class="f2 grow silver hover-white link dib z-999 pt3 pt0-l mr1 fi-social-github" title="Github link" rel="noopener" aria-label="follow on Github——Opens in a new window">
+<a href="{{ . }}" target="_blank" class="f2 grow silver hover-rorange link dib z-999 pt3 pt0-l mr1 fi-social-github" title="Github link" rel="noopener" aria-label="follow on Github——Opens in a new window">
 </a>
 {{ end }}
 {{ with .Param "mail" }}
-<a href="{{ . }}" target="_blank" class="f2 grow silver hover-white link dib z-999 pt3 pt0-l mr1 fi-mail" title="Send email" rel="noopener" aria-label="Send an email——Opens in a new window">
+<a href="{{ . }}" target="_blank" class="f2 grow silver hover-rorange link dib z-999 pt3 pt0-l mr1 fi-mail" title="Send email" rel="noopener" aria-label="Send an email——Opens in a new window">
 </a>
 {{ end }}
