--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,6 +1,6 @@
 <footer class="{{ .Site.Params.background_color_class | default "bg-black" }} bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex justify-between v-mid">
-  <a class="f4 b no-underline hover-white silver dn dib-ns" href="{{ .Site.BaseURL }}" >
+  <div class="flex justify-between items-center">
+  <a class="f4 b no-underline hover-rorange silver dn dib-ns" href="{{ .Site.BaseURL }}" >
     <p class="ma0" >&copy; {{ now.Format "2006" }} {{ .Site.Title }}</p>
   </a>
     <div>{{ partial "social-follow.html" . }}</div>
