--- a/static/css/rocstar.css
+++ b/static/css/rocstar.css
@@ -17,16 +17,21 @@ footer .hover-white {
    position:  fixed;
 }
 
-footer svg {
+svg {
   fill:currentcolor;
   height:inherit;
 }
 
 /*Add some rocstar orange*/
-.rocorange{
+.rorange{
   color:rgb(243,119,38);
 }
 
+
+.hover-rorange:focus,
+.hover-rorange:hover {
+  color:rgb(243,119,38);
+}
 
 /* RR: append css for foundations icons*/
 
